# nexguard-surveillance

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_server.py  start-nexguard.bat
backend/: Dockerfile  requirements.docker.txt  requirements.txt
backend/app/: Settings.py  alembic.ini  config.py  dependencies.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 2025_06_25_1148-814982343356_initial_migration.py  2025_07_11_0154-04628801f933_add_zone_model_and_link_to_camera.py  2025_09_08_2121-384dd7fbb2ff_initial_migration.py  2025_09_10_1654-3fb9a483f6b8_initial.py
backend/app/api/: router.py
backend/app/api/routes/: System.py  __init__.py  admin.py  auth.py  cameras.py  detections.py  health.py  inference.py  notifications.py  webrtc_stream.py  zone.py
backend/app/core/: database.py  models.py
backend/app/core/database/: connection.py
backend/app/data/: seed.py
backend/app/middleware/: middleware.py
backend/app/models/: FrameData.py  User.py  __init__.py
backend/app/schema/: __init__.py  camera.py  detection.py  media.py  notification.py  settings.py  sysconfig.py  user.py  zone.py
backend/app/scripts/: seed_data.py
backend/app/services/: alert_service.py  auth_service.py  camera_service.py  cleanup_service.py  detection.py  detection_backup.py  detection_fixed.py  detection_service.py  inference_engine.py  media_service.py  sys_config_service.py  video_capture.py  webrtc.py  zone_service.py
backend/app/utils/: APScheduler.py  database_crud.py  detection_manager.py  firebase_fcm_service.py
backend/scripts/: init_db.py  setup_storage.py
docs/: AUTHENTICATION.md  CLEANUP_SERVICE.md  NOTIFICATION-TOGGLE-FIX.md  PWA-IMPLEMENTATION.md  architecture.md  lucid-class-diagram-prompt.md  storage-configuration.md
frontend/: index.html
frontend/nexguard/: .prettierrc  Dockerfile  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json
frontend/nexguard/Types/: index.ts
frontend/nexguard/app/: globals.css  layout.tsx  providers.tsx
frontend/nexguard/app/(Auth)/: layout.tsx
frontend/nexguard/app/(Auth)/sign-in/: page.tsx
frontend/nexguard/app/(Auth)/sign-up/: page.tsx
frontend/nexguard/app/(root)/: layout.tsx  page.tsx
frontend/nexguard/app/(root)/replay/: page.tsx
frontend/nexguard/app/(root)/settings/: page.tsx
frontend/nexguard/app/offline/: page.tsx
frontend/nexguard/components/: AuthForm.tsx  CameraForm.tsx  CustomInput.tsx  FeedCard.tsx  PWAInstallPrompt.tsx  RightFeed.tsx  RouteGuard.tsx  ServiceWorkerRegistration.tsx  VideoPlayer.css  VideoPlayer.tsx  Videocard.tsx
frontend/nexguard/components/SettingsTabs/: CameraSettings.tsx  NotificationSettings.tsx  SystemSettings.tsx
frontend/nexguard/components/ui/: BottomNav.tsx  RightFeed.tsx  Sidebar.tsx  SidebarFooter.tsx  Videocard.tsx  calendar.tsx
frontend/nexguard/components/ui/notifications/: CustomToast.tsx
frontend/nexguard/constants/: index.ts
frontend/nexguard/context/: AuthContext.tsx  NotificationContext.tsx
frontend/nexguard/hooks/: useIsMobile.ts  useNotifications.ts  useOnlineStatus.ts
frontend/nexguard/lib/: auth-utils.ts  auth.ts  firebase.ts  notificationPreferencesAPI.ts  utils.ts
frontend/nexguard/lib/actions/: api.actions.ts  notification.actions.ts  notificationPreferencesAPI.ts  user.actions.ts
frontend/nexguard/lib/services/: notification.service.ts  webrtc_manager.ts
frontend/nexguard/public/: firebase-config-sw.js  firebase-messaging-sw.js  manifest.json  sw.js
nexguard/: package.json
scripts/: requirements.txt  train.py
tests/: capture_test.py
